--- a/style.css
+++ b/style.css
@@ -5,41 +5,55 @@
   gap: 0px;
   margin: auto;
   font-family: SVN-Big-Noodle-Titling;
+  /* font-family: Segoe UI, "Tahoma", Geneva, Verdana, sans-serif; */
   text-align: center;
   border-style: solid;
   border-color: white;
   border-width: 5px;
   background-color: black;
   height: 100px;
+  flex-wrap: nowrap;
   border-radius: 20px;
-  max-width: 1700px;
+  max-width: auto;
+  min-width: auto;
 }
 
 .BangDieuKhien {
   display: flex;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin: 30px;
+  margin: 10px auto;
   background-color: white;
   border-radius: 20px;
+  /* max-width: auto; */
+  opacity: 90%;
   max-width: auto;
+  min-width: auto;
+}
+
+#BangDieuKhienLabel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: UTM-HelvetIns;
+  font-size: 20px;
+  color: red;
 }
 
 .NutBam {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px;
-  border-radius: 5px;
-
+  flex-wrap: wrap;
+  /* margin: 0px; */
+  /* border-radius: 5px; */
   background-color: white;
   border-radius: 20px;
   max-width: auto;
 }
 
-.NutBam p {
-  display: block;
-}
 .NutBam button {
   margin: 15px;
   gap: 10px;
@@ -55,17 +69,19 @@
   border: none;
   cursor: pointer;
   width: 85px;
-  height: 100px;
+  height: 85px;
 }
 
 .BangDieuKhien button:hover {
+  /* chỉ áp dụng cho nút, k áp dụng cho dòng chữ BẢNG ĐIỀU KHIỂN*/
   box-shadow: 0 4px #ab3c3c;
   border-radius: 5px;
   top: 2px;
 }
 
 .BangDieuKhien button:active {
-  box-shadow: 0 0 #ab3c3c;
+  background: 0 0 #3c5cab;
+  box-shadow: 0 4px #849ed4;
   border-radius: 5px;
   top: 6px;
 }
@@ -77,6 +93,8 @@
   color: red;
   border: 2px;
   font-family: SVN-Agency-FB;
+  /* font-family: Segoe UI, "Tahoma", Geneva, Verdana, sans-serif; */
+  /* font-weight: bold; */
   padding-bottom: 10px;
   padding-left: 20px;
   font-size: 65pt;
@@ -195,18 +213,70 @@ footer {
   text-align: center;
 }
 
-p.quote {
-  display: flex;
-
-  font-family: UTM-HelvetIns;
-  color: red;
-}
-
 body {
   background-image: url("assets/image/34.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-blend-mode: screen;
+}
+
+.UngDungHoTroTotNhat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0px auto;
+  background-color: white;
+  border-radius: 20px;
+  max-width: auto;
+  min-width: auto;
+  opacity: 90%;
+}
+
+#UngDungHoTroTotNhat {
+  font-family: UTM-HelvetIns;
+  font-size: 20px;
+  margin-right: 15px;
+  margin-left: 15px;
+  color: red;
+  text-align: center;
+}
+
+#logohanoibus {
+  max-width: auto;
+  max-height: 50px;
+  zoom: 75%;
+}
+
+#va {
+  font-family: UTM-HelvetIns;
+  font-size: 20px;
+  margin-right: 15px;
+  margin-left: 15px;
+  color: red;
+  text-align: center;
+}
+
+#logohanoibrt {
+  max-width: auto;
+  max-height: 50px;
+  zoom: 75%;
+}
+
+#CacHangKhac {
+  font-family: UTM-HelvetIns;
+  font-size: 20px;
+  margin-top: 5px;
+  margin-right: 15px;
+  margin-left: 15px;
+  color: red;
+  text-align: center;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @font-face {
