Them tinh nang nhap ma tuyen, diem dau, diem cuoi, xi nghiep; luu thong tin cua chung vao localstorage de khi reload lai van khong bi mat

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ footer {
 }
 
 body {
-  background-image: url("assets/image/34.png");
+  background-image: url("assets/image/53a (2).jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-blend-mode: screen;
