--- a/css/input.css
+++ b/css/input.css
@@ -13,6 +13,47 @@ body {
   align-items: center;
 }
 
+.parent {
+  display: flex;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 15px 15px;
+  background-color: white;
+  border-radius: 20px;
+  flex-direction: column;
+  /* max-width: auto; */
+  opacity: 90%;
+  max-width: auto;
+  min-width: 300px;
+}
+
+.Nhap {
+  margin: 10px 10px 10px 10px;
+}
+
+#NhapLabel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: UTM-HelvetIns;
+  font-size: 20px;
+  color: red;
+}
+
+.NutBam {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0px;
+  border-radius: 5px;
+  background-color: white;
+  border-radius: 20px;
+  max-width: auto;
+}
+
 .NutBam button {
   margin: 15px;
   gap: 10px;
@@ -31,7 +72,18 @@ body {
   height: 60px;
 }
 
-.BangDieuKhien button:hover {
+.NutBam .ChayLed {
+  background: rgba(126, 208, 172, 255);
+  box-shadow: 0 6px rgba(110, 177, 146, 255);
+}
+
+.NutBam .ChayLed:hover {
+  box-shadow: 0 4px rgba(110, 177, 146, 255);
+  border-radius: 5px;
+  top: 2px;
+}
+
+.NutBam button:hover {
   /* chỉ áp dụng cho nút, k áp dụng cho dòng chữ BẢNG ĐIỀU KHIỂN*/
   box-shadow: 0 4px #ab3c3c;
   border-radius: 5px;
@@ -45,7 +97,32 @@ body {
   top: 6px;
 }
 
-.Nhap {
-  background-color: white;
-  border-radius: 20px;
+#maTuyenInput,
+#diemDauInput,
+#diemCuoiInput,
+#xiNghiepInput {
+  width: max-content;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: rgba(126, 208, 172, 255);
+  text-transform: uppercase;
+}
+
+input[type="text"] {
+  width: 300px;
+  border: none;
+  border-bottom: 2px solid rgba(126, 208, 172, 255);
+  font-family: "Courier New", Courier, monospace;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#canhBao {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 20px;
+  color: red;
+  text-transform: uppercase;
 }
