--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,8 @@ body {
   gap: 0px;
   margin-top: 5px;
   margin: 15px 15px;
-  font-family: SVN-Big-Noodle-Titling;
+  font-family: UTM-Neutra;
+  font-weight: normal;
   /* font-family: Segoe UI, "Tahoma", Geneva, Verdana, sans-serif; */
   text-align: center;
   border-style: solid;
@@ -115,13 +116,22 @@ body {
   top: 6px;
 }
 
+#ModeDangChay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: UTM-HelvetIns;
+  font-size: 20px;
+  color: red;
+}
+
 #maTuyen {
   flex: 0.5; /*0.5 phần*/
   display: flex;
   position: relative;
   color: red;
   border: 2px;
-  font-family: SVN-Agency-FB;
+  font-family: SVN-Cintra;
   /* font-family: Segoe UI, "Tahoma", Geneva, Verdana, sans-serif; */
   /* font-weight: bold; */
   padding-bottom: 10px;
@@ -134,6 +144,20 @@ body {
   text-transform: uppercase;
   flex-shrink: 0;
   background-color: black;
+
+  /* animation: blink 1.25s steps(1, end) infinite; */
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .luongTuyen {
@@ -327,14 +351,4 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.road-line {
-  position: fixed;
-  bottom: 50px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  border-top: 15px dashed white;
-  z-index: 0;
 }
