--- a/css/main.css
+++ b/css/main.css
@@ -131,8 +131,8 @@ body {
   position: relative;
   color: red;
   border: 2px;
-  font-family: SVN-Cintra;
-  /* font-family: Segoe UI, "Tahoma", Geneva, Verdana, sans-serif; */
+  /* font-family: SVN-Cintra; */
+  font-family: Segoe UI, "Tahoma", Geneva, Verdana, sans-serif;
   /* font-weight: bold; */
   padding-bottom: 10px;
   padding-left: 20px;
@@ -145,7 +145,7 @@ body {
   flex-shrink: 0;
   background-color: black;
 
-  /* animation: blink 1.25s steps(1, end) infinite; */
+  /* animation: blink 1.25s steps(1, end) infinite; // hiệu ứng nhấp nháy */
 }
 
 @keyframes blink {
