--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ body {
   position: relative;
   color: red;
   border: 2px;
-  font-family: SVN-ProductSansBold;
+  font-family: SVN-ProductSansBoldgit;
   padding-bottom: 10px;
   padding-left: 20px;
   font-size: 65pt;
