--- a/css/input.css
+++ b/css/input.css
@@ -37,7 +37,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: UTM-HelvetIns;
+  font-family: Quicksand;
   font-size: 20px;
   color: red;
 }
