--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5px;
+  margin-top: 15px;
   margin: 15px 15px;
-  font-family: UTM-Neutra;
+  /* font-family: UTM-Neutra; */
+  font-family: SVN-ProductSansBold;
   text-align: center;
   border-style: solid;
   border-color: white;
@@ -49,7 +50,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: UTM-HelvetIns;
+  font-family: Quicksand;
   font-size: 20px;
   color: red;
 }
@@ -113,7 +114,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: UTM-HelvetIns;
+  font-family: Quicksand;
   font-size: 20px;
   color: red;
 }
@@ -124,7 +125,7 @@ body {
   position: relative;
   color: red;
   border: 2px;
-  font-family: SVN-ProductSansBold;
+
   padding-bottom: 10px;
   padding-left: 20px;
   font-size: 65pt;
@@ -272,11 +273,11 @@ body {
   align-items: center;
   color: red;
   border: 2px;
-  font-family: SVN-ProductSansBold;
   font-size: 65pt;
   letter-spacing: 4px;
   transform: scale(1, 1);
   text-transform: uppercase;
+  margin: auto;
 }
 
 #HuyDongRaTuyen {
@@ -313,6 +314,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  flex-direction: column;
   margin: 15px 15px;
   background-color: white;
   border-radius: 20px;
@@ -321,7 +323,7 @@ footer {
 }
 
 #UngDungHoTroTotNhat {
-  font-family: UTM-HelvetIns;
+  font-family: Quicksand;
   font-size: 20px;
   margin-right: 15px;
   margin-left: 15px;
@@ -333,7 +335,7 @@ footer {
   max-width: auto;
   max-height: 50px;
   zoom: 80%;
-  margin: 5px 5px 5px 5px;
+  margin: 10px 10px 10px 10px;
 }
 
 footer {
