--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ body {
   flex-wrap: wrap;
   background-color: white;
   border-radius: 20px;
+  margin: 5px;
 }
 
 .NutBam button {
@@ -56,7 +57,6 @@ body {
   border-radius: 5px;
   background: #cb4e4e;
   color: #fff;
-  box-shadow: 0 6px #ab3c3c;
   transition: none;
   border: none;
   cursor: pointer;
@@ -66,23 +66,30 @@ body {
 
 .NutBam button#cam {
   background: rgba(252, 146, 104, 1);
-  box-shadow: 0 6px rgba(208, 95, 60, 1);
 }
 
 .NutBam button#xanhla {
   background: rgba(126, 208, 172, 1);
-  box-shadow: 0 6px rgba(110, 177, 146, 1);
 }
 
 .NutBam button#xanhduong {
-  background: rgba(167, 228, 255, 1);
-  box-shadow: 0 6px rgba(137, 208, 240, 1);
+  background: rgba(94,153,223,255);
 }
 
-.BangDieuKhien .ChayLed:hover,
-.BangDieuKhien button:hover {
-  box-shadow: 0 4px #ab3c3c;
-  border-radius: 5px;
+.NutBam button#vang {
+  background: rgba(252,254,156,255);
+}
+
+.NutBam button#tim {
+  background: rgb(181, 185, 255);
+}
+
+.NutBam button#hong {
+  background: rgb(255, 156, 238);
+}
+
+.NutBam button#do {
+  background: rgba(208,103,102,255);
 }
 
 /* hiệu ứng nhấp nháy maTuyen */
