--- a/css/input.css
+++ b/css/input.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   height: 100vh;
   /* background-image: url("assets/image/1079931_ONGXWJ0.jpg"); */
-  background-color: rgba(167, 228, 255, 255);
+  background-color: rgba(94,153,223,255);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
