--- a/css/font.css
+++ b/css/font.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "SVN-ProductSansBold";
-  src: url("../assets/fonts/SVN-ProductSansBold.otf") format("truetype");
+  font-family: "UTM-HelvetIns";
+  src: url("../assets/fonts/UTM-HelvetIns.ttf") format("truetype");
   font-style: normal;
 }
 
