--- a/css/input.css
+++ b/css/input.css
@@ -1,16 +1,10 @@
 body {
-  margin: 0;
-  height: 100vh;
-  /* background-image: url("assets/image/1079931_ONGXWJ0.jpg"); */
   background-color: rgba(94,153,223,255);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-blend-mode: screen;
-  min-width: 600px;
+  min-width: 350px;
+/* 
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .Nhap {
@@ -18,15 +12,12 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin: 15px 15px;
-  padding: 15px 15px;
+  margin: 15px;
   background-color: white;
   border-radius: 20px;
   flex-direction: column;
-  /* max-width: auto; */
-  opacity: 90%;
-  max-width: auto;
-  min-width: 300px;
+  opacity: 0.8;
+  
 }
 
 #NhapLabel {
@@ -94,7 +85,7 @@ body {
 }
 
 input[type="text"] {
-  width: 200px;
+  width: 150px;
   border: none;
   border-bottom: 2px solid rgba(126, 208, 172, 255);
   font-family: "Courier New", Courier, monospace;
