--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
-  background-color: rgba(94,153,223,255);
-  min-width: 500px;
+  /* background-color: rgba(94,153,223,255); */
+  min-width: 450px;
 }
 
 .LED {
@@ -13,14 +13,19 @@ body {
   text-align: center;
   border: 5px solid white;
   background-color: black;
-  height: 150px;
-  border-radius: 20px;
+  height: 200px;
+  border-radius: 5px;
   overflow: hidden;
-
   white-space: nowrap;
 }
 
-.BangDieuKhien {
+@media screen and (max-width: 1024px) {
+  .LED {
+    height: 100px;
+  }
+}
+
+.ThuGonNoiDung {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -28,8 +33,20 @@ body {
   align-items: center;
   margin: 30px;
   background-color: white;
-  border-radius: 20px;
-  opacity: 0.9;
+  border-radius: 5px;
+  opacity: 0.8;
+}
+
+#BangDieuKhien {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+  background-color: white;
+  border-radius: 5px;
+  opacity: 0.8;
 }
 
 .BangDieuKhienLabel {
@@ -49,7 +66,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 0px;
   margin: 5px;
 }
 
@@ -59,7 +76,7 @@ body {
   border-radius: 5px;
   background: #cb4e4e;
   color: #fff;
-  transition: none;
+  /* transition: none; */
   border: none;
   cursor: pointer;
   width: 160px;
@@ -94,6 +111,12 @@ body {
   background: rgba(208,103,102,255);
 }
 
+.NutBam button:hover{
+  border-style: solid;
+  border-color: chartreuse;
+  border-width: 2px;
+}
+
 /* hiệu ứng nhấp nháy maTuyen */
 @keyframes blink {
   0%,
@@ -120,10 +143,17 @@ body {
   display: flex;
   color: rgb(246,29,4);
   margin: 30px;
-  font-family: ChakraPetch;
-  font-size: 80pt;
+  padding: 10px;
+  font-size: 150px;
   text-transform: uppercase;
   flex-shrink: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  #maTuyen{
+    font-size: 70px;
+    margin: 5px;
+  }
 }
 
 .NoiDungChayChu {
@@ -138,36 +168,57 @@ body {
   white-space: nowrap;
 }
 
+/* .NoiDungChayChu p{
+  transform: scaleX(1.25);
+  
+} */
+
 #route-info {
   display: flex;
   align-items: center;
   white-space: nowrap;
   position: absolute;
   color: rgb(17, 205, 142);
-  font-size: 50pt;
+  font-size: 100px;
   text-transform: uppercase;
+
+  
 }
 
-#route-info p{
-  margin: 5pxx;
+@media screen and (max-width: 1024px) {
+  #route-info{
+    font-size: 35px;
+  }
 }
 
 #xiNghiep,
 #MaTuyenCanGiua,
-#HuyDongRaTuyen,
 #XeVeGara {
   display: flex;
   align-items: center;
   justify-content: center;
-
   color: rgb(17, 205, 142);
   text-transform: uppercase;
-  font-size: 50pt;
-  height: 100%; /* Để căn giữa chính xác */
+  font-size: 100px;
+  height: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+  #xiNghiep,
+  #HuyDongRaTuyen,
+  #XeVeGara{
+    font-size: 35px;
+  }
 }
 
 #MaTuyenCanGiua{
-  font-size: 80pt;
+  font-size: 150px;
+}
+
+@media screen and (max-width: 1024px) {
+  #MaTuyenCanGiua{
+    font-size: 70px;
+  }
 }
 
 #mui_ten_xanh1,
@@ -180,16 +231,11 @@ body {
   margin-right: 5px;
 }
 
-#xiNghiep {
-  flex: 7.5;
-  /* display: flex; */
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  
-  text-transform: uppercase;
-  color: rgb(17, 205, 142);
-  font-size: 50pt;
+@media screen and (max-width: 1024px) {
+  #mui_ten_xanh1,
+  #mui_ten_xanh2 {
+    transform: scale(0.75);
+  }
 }
 
 .image {
@@ -203,13 +249,20 @@ body {
 #transerco {
   display: none;
   max-width: 100%;
-  max-height: 60pt;
+  max-height: 90pt;
   padding-left: 5px;
   padding-right: 5px;
   object-fit: cover;
 }
 
-.container {
+@media screen and (max-width: 1024px) {
+  #hanoibus,
+  #transerco {
+    max-height: 40pt;
+  }
+}
+
+#container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -224,8 +277,8 @@ body {
   flex: 1 1 auto;
   min-width: 350px;
   background: #fff;
-  border-radius: 20px;
-  opacity: 0.9;
+  border-radius: 5px;
+  opacity: 0.8;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -271,9 +324,8 @@ body {
 
 .Table th,
 .Table td {
-  /* display: block; */
   flex-wrap: wrap;
-  border: 1px solid rgba(126, 208, 172, 1); /* Đường kẻ trong */
+  border: 1px solid rgba(126, 208, 172, 1); 
   padding: 5px;
   text-align: center;
 }
@@ -299,6 +351,6 @@ body {
 
 #logobus img {
   max-height: 50px;
-  zoom: 80%;
+  zoom: 75%;
   margin: 10px;
 }
