--- a/css/hdsd.css
+++ b/css/hdsd.css
@@ -1,54 +1,34 @@
-body {
-    /* background-image: url("assets/image/1079931_ONGXWJ0.jpg"); */
+body{
     background-color: rgba(94,153,223,255);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: screen;
-}
-
-.HDSD {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 30px;
-    background-color: white;
-    border-radius: 20px;
-    opacity: 0.9;
-}
-
-#TieuDe{
-    display: flex;
-    margin: 10px;
-    justify-content: center;
-    align-items: center;
-    font-family: Quicksand;
-    
-    font-size: 20px;
-    color: red;
-}
-
-#NoiDung{
-    font-family: Quicksand;
-    font-size: 20px;
-    color: rgb(16, 210, 126);
-    /* width: 80%; */
-    text-align: justify;
-    align-self: flex-start;
-    margin-left: 30px;
-    margin-right: 30px;
-    list-style-position: inside;
-    line-height: 1.8;
-    padding-left: 0;
 }
 
 
-#NoiDung img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: auto;
+.layout {
+  width: 100%;
+  display: grid;
+  grid:
+    "sidebar body" 1fr
+    / 30% 70%;
+  gap: 8px;
+}
+
+.sidebar, .body{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+  background-color: white;
+  border-radius: 5px;
+  opacity: 0.8;
+  font-family: Quicksand;
+}
+
+.sidebar { 
+    grid-area: sidebar; 
+}
+
+.body { 
+    grid-area: body; 
 }
