--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  /* background-color: rgba(94,153,223,255); */
+  background-color: rgb(160,204,244);
   min-width: 450px;
 }
 
@@ -16,7 +16,6 @@ body {
   height: 200px;
   border-radius: 5px;
   overflow: hidden;
-  white-space: nowrap;
 }
 
 @media screen and (max-width: 1024px) {
@@ -92,7 +91,7 @@ body {
 }
 
 .NutBam button#xanhduong {
-  background: rgba(94,153,223,255);
+  background: rgb(160,204,244);
 }
 
 .NutBam button#vang {
@@ -179,7 +178,7 @@ body {
   white-space: nowrap;
   position: absolute;
   color: rgb(17, 205, 142);
-  font-size: 100px;
+  font-size: 75px;
   text-transform: uppercase;
 
   
@@ -193,19 +192,21 @@ body {
 
 #xiNghiep,
 #MaTuyenCanGiua,
+#HuyDongRaTuyen,
 #XeVeGara {
   display: flex;
   align-items: center;
   justify-content: center;
   color: rgb(17, 205, 142);
   text-transform: uppercase;
-  font-size: 100px;
+  font-size: 75px;
   height: 100%;
 }
 
 @media screen and (max-width: 1024px) {
   #xiNghiep,
   #HuyDongRaTuyen,
+  #XeHuyDong,
   #XeVeGara{
     font-size: 35px;
   }
@@ -213,6 +214,8 @@ body {
 
 #MaTuyenCanGiua{
   font-size: 150px;
+  transform: scaleX(1.25);
+  letter-spacing: 2.5px;
 }
 
 @media screen and (max-width: 1024px) {
