thay font, them event listener

--- a/css/font.css
+++ b/css/font.css
@@ -5,13 +5,19 @@
 }
 
 @font-face {
-  font-family: "Quicksand";
-  src: url("../assets/fonts/Quicksand-Bold.ttf") format("truetype");
+  font-family: "ChakraPetch";
+  src: url("../assets/fonts/ChakraPetch-Bold.ttf") format("truetype");
   font-style: normal;
 }
 
 @font-face {
   font-family: "ChakraPetch";
   src: url("../assets/fonts/ChakraPetch-Bold.ttf") format("truetype");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Averta-Std-CY";
+  src: url("../assets/fonts/Averta-Std-CY.otf") format("truetype");
   font-style: normal;
 }
