--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,28 @@
   box-shadow: 0 0 0 2px #ff0000;
 }
 body {
-  background-color: rgb(160,204,244);
+  background-color: rgb(17, 205, 142);
   min-width: 450px;
+
+  /* Chèn ảnh nền */
+  /* background-image: url('/assets/image/banner150.jpg');
+  background-size: cover;
+  background-position: center; */
+  
+  /* Làm mờ ảnh nền */
+  /* filter: blur(5px); */
+  
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.096); /* Màu phủ đen với độ mờ */
+  z-index: -1; /* Đặt phía sau nội dung */
 }
 
 .LED {
@@ -43,7 +63,7 @@ body {
   margin: 30px;
   background-color: white;
   border-radius: 5px;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 #BangDieuKhien {
@@ -55,7 +75,7 @@ body {
   margin: 30px;
   background-color: white;
   border-radius: 5px;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .BangDieuKhienLabel {
@@ -83,7 +103,7 @@ body {
   margin: 10px;
   font-size: 15pt;
   border-radius: 5px;
-  background: #cb4e4e;
+  background: rgb(17, 205, 142);
   color: #fff;
   /* transition: none; */
   border: none;
@@ -93,33 +113,6 @@ body {
   font-family: Averta-Std-CY;
 }
 
-.NutBam button#cam {
-  background: rgba(252, 146, 104, 1);
-}
-
-.NutBam button#xanhla {
-  background: rgba(126, 208, 172, 1);
-}
-
-.NutBam button#xanhduong {
-  background: rgb(160,204,244);
-}
-
-.NutBam button#vang {
-  background: rgba(252,254,156,255);
-}
-
-.NutBam button#tim {
-  background: rgb(181, 185, 255);
-}
-
-.NutBam button#hong {
-  background: rgb(255, 156, 238);
-}
-
-.NutBam button#do {
-  background: rgba(208,103,102,255);
-}
 
 .NutBam button:hover{
   border-style: solid;
@@ -148,7 +141,7 @@ body {
   color: red;
 }
 
-#maTuyen {
+#maTuyen, #nhanhTuyen {
   flex: 0.5;
   display: flex;
   color: rgb(246,29,4);
@@ -201,14 +194,22 @@ body {
   }
 }
 
-#xiNghiep,
-#MaTuyenCanGiua,
+#xiNghiep{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(17, 205, 142);
+  text-transform: uppercase;
+  font-size: 75px;
+  height: 100%;
+}
+
 #HuyDongRaTuyen,
 #XeVeGara {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(17, 205, 142);
+  color: rgb(246,29,4);
   text-transform: uppercase;
   font-size: 75px;
   height: 100%;
@@ -225,8 +226,13 @@ body {
 
 #MaTuyenCanGiua{
   font-size: 150px;
-  transform: scaleX(1.25);
-  letter-spacing: 2.5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(246,29,4);
+  text-transform: uppercase;
+  height: 100%;
+  letter-spacing: 15px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -292,7 +298,7 @@ body {
   min-width: 350px;
   background: #fff;
   border-radius: 5px;
-  opacity: 0.8;
+  opacity: 0.9;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -311,7 +317,7 @@ body {
   align-items: center;
   font-family: Averta-Std-CY;
   font-size: 20px;
-  color: rgba(126, 208, 172, 1);
+  color: rgb(17, 205, 142);
   text-transform: uppercase;
   flex-direction: row;
 }
@@ -333,13 +339,13 @@ body {
   table-layout: fixed;
   margin: 15px;
   text-transform: uppercase;
-  color: rgba(126, 208, 172, 1);
+  color: rgb(17, 205, 142);
 }
 
 .Table th,
 .Table td {
   flex-wrap: wrap;
-  border: 1px solid rgba(126, 208, 172, 1); 
+  border: 1px solid rgb(17, 205, 142);
   padding: 5px;
   text-align: center;
 }
