--- a/css/input.css
+++ b/css/input.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(17, 205, 142);
   /* allow smaller devices while keeping a sensible minimum */
-  min-width: 350px;
+  
   /* center the .Nhap container horizontally and vertically */
   display: flex;
   justify-content: center; /* horizontal */
@@ -12,12 +12,17 @@ body {
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 1024px) {
+  body{
+    min-width: 350px;
+  }
+}
+
 .Nhap {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  /* center block and keep responsive width */
   margin: 0 auto;
   background-color: white;
   border-radius: 20px;
@@ -25,10 +30,20 @@ body {
   opacity: 0.95;
   width: clamp(320px, 85%, 900px);
   padding: 18px;
-  box-sizing: border-box;
   max-height: 90vh;
-  overflow: auto;
+  min-width: 700px; */
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+  background-color: white;
+  border-radius: 5px;
+  opacity: 0.9;
 }
+
 
 #NhapLabel {
   display: flex;
@@ -48,27 +63,11 @@ body {
   padding: 10px;
 }
 
-table{
-  min-width: 500px;
-}
-td p {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-@media (min-aspect-ratio: 4/3) {
-  /* Khi xoay ngang (aspect ratio rộng hơn), chia thành 2 cột */
-  .NhapDuLieu {
-    flex-direction: row;
-    gap: 30px;
-  }
-}
 
 .NutBam {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   margin: 0px;
   border-radius: 5px;
   background-color: white;
@@ -104,12 +103,18 @@ td p {
 
 
 input[type="text"] {
-  min-width: 350px;
+  min-width: 500px;
   border: none;
   border-bottom: 2px solid rgb(17, 205, 142);
   font-family: "Courier New", Courier, monospace;
   font-size: 20px;
   font-weight: bold;
+}
+
+@media screen and (max-width: 1024px) {
+  input[type="text"] {
+    min-width: 250px;
+  }
 }
 
 #canhBao {
