--- a/css/main.css
+++ b/css/main.css
@@ -123,12 +123,23 @@ body {
 
 #ModeDangChay {
   display: flex;
+  
   margin: 10px;
   justify-content: center;
   align-items: center;
   font-family: Averta-Std-CY;
   font-size: 20px;
   color: red;
+}
+
+.version {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(246,29,4);
+  text-transform: uppercase;
+  font-size: 75px;
+  height: 100%;
 }
 
 #maTuyen{
